--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -9,6 +9,7 @@
     {% if site_settings.favicon_src %}<link rel="shortcut icon" href="{{ site_settings.favicon_src }}" />{% endif %}
     <meta name="description" content="{{ page_meta.meta_description }}">
     <script src="https://kit.fontawesome.com/b38c0b0f8c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/xys5ctm.css">
     {{ require_css(get_asset_url("../../css/main.css")) }}
     {{ require_css(get_asset_url("../../css/app.css")) }}
     {% if template_css %}
